--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Pharmacy Management System with SQLite backend",
   "main": "server.js",
   "scripts": {
-    "start": "node init_db.js && node server.js",
-    "dev": "nodemon server.js",
-    "init-db": "node ./init_db.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
